v2.52 Main theme - Fix issue with accordion menu flickering with mouse over (was switching between block and inline-block because of conflicting CSS rules in the eatlas_responsive_menu module).

--- a/css/main.css
+++ b/css/main.css
@@ -263,13 +263,17 @@ ol.breadcrumb li.last:after {
 
 #main-menus ul.menu li a,
 #main-menus ul.menu li a:hover,
-ul.accordion-menu li a,
-ul.accordion-menu li a:hover,
 .region-header .block-menu ul.menu li a,
 .region-header .block-menu ul.menu li a:hover {
 	display: inline-block;
 	text-decoration: none;
 }
+
+ul.accordion-menu li a,
+ul.accordion-menu li a:hover {
+	text-decoration: none;
+}
+
 /* Display an arrow pointing down, on menus that contains a sub-menu */
 #main-menus ul.menu li.expanded > a:after,
 #main-menus ul.accordion-menu li.expanded > a:after,
